Added imageModal controller

--- a/app/views/partials/imageModal.html
+++ b/app/views/partials/imageModal.html
@@ -1,9 +1,9 @@
 <div>
     <div class="modal-header">
-        <h4>{{name()}}testi</h4>
+        <h4>{{name}}</h4>
     </div>
     <div class="modal-body">
-		<div>body</div>
+		<div><img ng-src="data:image/jpeg;base64,{{picture}}" style="height: 200px;"></div>
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" ng-click="$close()">OK</button>
